--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.1.0"
 dash = "^2.13.0"
+toml = "^0.10.2"
 
 
 [tool.poetry.group.dev.dependencies]
